--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 marshmallow==3.2.0
 marshmallow-sqlalchemy==0.19.0
+numpy==1.17.2
 six==1.12.0
 SQLAlchemy==1.3.8
 Werkzeug==0.16.0
