--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
 alembic==1.2.1
+astroid==2.3.1
+bcrypt==3.1.7
+cffi==1.12.3
 Click==7.0
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.8
 flask-marshmallow==0.10.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy-object-proxy==1.4.2
 Mako==1.1.0
 MarkupSafe==1.1.1
 marshmallow==3.2.0
 marshmallow-sqlalchemy==0.19.0
+mccabe==0.6.1
 numpy==1.17.2
+psycopg2==2.8.3
+pycparser==2.19
+pylint==2.4.2
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.8
+typed-ast==1.4.0
 Werkzeug==0.16.0
+wrapt==1.11.2
