--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.8
 flask-marshmallow==0.10.1
 Flask-Migrate==2.5.2
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-Testing==0.7.1
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
