--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ mccabe==0.6.1
 numpy==1.17.2
 psycopg2==2.8.3
 pycparser==2.19
+PyJWT==1.7.1
 pylint==2.4.2
 python-dateutil==2.8.0
 python-editor==1.0.4
