--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Cors==3.0.8
 flask-marshmallow==0.10.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
+Flask-SocketIO==4.2.1
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
 isort==4.3.21
@@ -27,6 +28,8 @@ PyJWT==1.7.1
 pylint==2.4.2
 python-dateutil==2.8.0
 python-editor==1.0.4
+python-engineio==3.9.3
+python-socketio==4.3.1
 six==1.12.0
 SQLAlchemy==1.3.8
 typed-ast==1.4.0
