--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ Flask-Script==2.0.6
 Flask-SocketIO==4.2.1
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
+gevent==1.4.0
+greenlet==0.4.15
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
