--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ astroid==2.3.1
 bcrypt==3.1.7
 cffi==1.12.3
 Click==7.0
+dnspython==1.16.0
+eventlet==0.25.1
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.8
@@ -12,7 +14,6 @@ Flask-Script==2.0.6
 Flask-SocketIO==4.2.1
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
-gevent==1.4.0
 greenlet==0.4.15
 isort==4.3.21
 itsdangerous==1.1.0
@@ -23,6 +24,7 @@ MarkupSafe==1.1.1
 marshmallow==3.2.0
 marshmallow-sqlalchemy==0.19.0
 mccabe==0.6.1
+monotonic==1.5
 numpy==1.17.2
 psycopg2==2.8.3
 pycparser==2.19
