--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-SocketIO==4.2.1
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
 greenlet==0.4.15
+gunicorn==19.9.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
