join two players in game

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,14 @@ Flask-SocketIO==4.2.1
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
 greenlet==0.4.15
+gunicorn==19.9.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
 lazy-object-proxy==1.4.2
 Mako==1.1.0
 MarkupSafe==1.1.1
-marshmallow==3.2.0
+marshmallow==3.2.1
 marshmallow-sqlalchemy==0.19.0
 mccabe==0.6.1
 monotonic==1.5
